Temp fix to stop footer from overlapping timelines table and preventing you from clicking on things

--- a/AileronAirwaysWeb/wwwroot/css/timeline.css
+++ b/AileronAirwaysWeb/wwwroot/css/timeline.css
@@ -560,10 +560,8 @@ i {
 
 /* ---------------- Footer --------------------- */
 footer {
-    position: relative;
 
     text-align: center;
-    float: left;
 
     font-size: .8em;
     width: 100%;
